--- a/work/RESI_CI_bootstrap.Rmd
+++ b/work/RESI_CI_bootstrap.Rmd
@@ -36,33 +36,36 @@ library(parallel)
 source("../R/boot.ci.R")
 source("../R/nccd.R")
 source("../R/ncf.R")
+source("../R/S.R")
 ```
 
 
-## Simulations
+# Simulations
 
 ```{r,eval=FALSE}
-SimFunc <- function(n = 100, r = 1000, alpha = 0.05, m = 1, S = 0.6, shape, hetero = TRUE, sigma2 = 0.5, method, multi, boot.type, fixed_rv, pi = 0.5, num.cores = 10){
+SimFunc <- function(n = 100, r = 1000, alpha = 0.05, m = 1, S = 0.6, shape, hetero = TRUE, method, multi, boot.type, fixed_rv, pi = 0.3, num.cores = 10){
   
   # simulate x and y
-  if (fixed_rv == TRUE) {
+  if (fixed_rv) {
     sequence = rep(0:1, times = m*c(n - ceiling(n*pi), ceiling(n*pi)))
     x = sample(sequence, replace = FALSE) %>% matrix(nrow = n, ncol = m)
   } else {
     x = rbinom(n*m, 1, pi) %>% matrix(nrow = n, ncol = m)
+    sum(x)
   }
-  
-  if (hetero == TRUE) {
-    errors = rgamma(n, shape = sigma2* shape, rate = sqrt(shape )/ (x[,1] + 0.5) ) - sigma2*sqrt(shape) * (x[,1]+ 0.5)  # depends on the 1st covariate
-  } else {
-    errors = rgamma(n, shape = sigma2* shape, rate = sqrt(shape) ) - sigma2* sqrt(shape)
-  }
-  
   xTx = sum(x^2)
+
+  if (hetero) {
+    errors = (rgamma(n, shape = shape, rate = sqrt(shape)/ (x[,1] + 0.5) ) - sqrt(shape) * (x[, 1] + 0.5))/sqrt(0.5^2*(1-pi) + 1.5^2*pi)  # depends on the 1st covariate
+    var(errors)
+  } else {
+    errors = rgamma(n, shape =  shape, rate = sqrt(shape) ) - sqrt(shape)
+  }
   # true beta
-  beta = sqrt( sigma2 * n * S^2 / xTx ) 
-  # generate values of y
-  y = x %*% beta + errors
+  beta = sqrt(S^2/pi/(1-pi))
+  
+  # generate values of y -- intercept
+  y = 1 + x %*% beta + errors
   
   # fit the model
   model <- lm(y ~ x)
@@ -139,7 +142,7 @@ SimFunc <- function(n = 100, r = 1000, alpha = 0.05, m = 1, S = 0.6, shape, hete
 } # end of SimFunc()
 
 # test
-SimFunc(multi = 'none', shape = 100, method = "F", boot.type = 1, num.cores = 1, fixed_rv = FALSE)
+SimFunc(multi = 'none', shape = 100, method = "F", boot.type = 1, num.cores = 1, fixed_rv = FALSE, hetero = FALSE)
 
 # 50 0 none 1 Chisq TRUE TRUE 0.1
 SimFunc(n = 50, S = 0, multi = "none", boot.type = 1, method = "Chisq", fixed_rv = TRUE, hetero = TRUE, shape = 0.1)
@@ -148,22 +151,28 @@ SimFunc(n = 50, S = 0, multi = "none", boot.type = 1, method = "Chisq", fixed_rv
 
 ```{r, eval=FALSE}
 set.seed(1213)
-nsim = 10 # outter loop
-r = 100 # inner loop
+nsim = 100 # outter loop
+r = 500 # inner loop
 alpha = 0.05
 ns = c(50, 100, 250)
+# ns = 200
 Ss = c(0, 0.33, 0.66, 1)
-shapes = c(0.1, 100) # skewness
-heteros = c(TRUE, FALSE) # hetero/homo-skedasticity
+# Ss = c(0, 0.6)
+# shapes = c(0.1, 100) # skewness
+shapes = c(0.1, 100)
+# heteros = c(TRUE, FALSE) # hetero/homo-skedasticity
+heteros = c(TRUE, FALSE)
 
 methods = c("F", "Chisq") # F -> naive estimator for S; Chisq -> HC3 estimator for S
 multis = c('none', 'rad', 'normal')
+# multis = c("normal")
 boot.types = 1:4
 fixeds = c(TRUE, FALSE) # simulate fixed covariates?
+# fixeds = FALSE
 
-num.cores = 1
+num.cores = 44
 
-# n = 50; S = 0; multi = 'none'; boot.type = 1
+# n = 50; S = 0; multi = 'none'; boot.type = 1; method = "F"; fixed = FALSE; hetero = TRUE; shape = 0.1
 
 out = expand.grid(n = ns, S = Ss, shape = shapes, hetero = heteros, 
                   method = methods, multi = multis, boot.type = boot.types,
@@ -223,39 +232,194 @@ for (n in ns){
 ```
 
 ```{r}
-# write.csv(out, "CIs_Simple_Case_bootstrap_Jul6.csv")
+# write.csv(out, "Simulation outputs/CIs_Simple_Case_bootstrap_Jul13.csv")
 ```
 
 
 # Plots
+
++ Bootstrap types: 
+
+  1: resampling covariates along with residuals;
+  2: fixing covariates and only bootstrapping residulas;
+  3: resampling covariates and residuals independently w/ replacements
+  4. no sampling, just multipliers
+
++ Estimators: 1) using naive var estimator (homoskedasticity); 2) using robust var-cov estimator (HC3, heteroskedasticity)
++ CI methods: 1) using non-central Chi-square dist; 2) using singly non-central F-dist; 3) non-parametric bootstraps (boot.type = 1 & multiplier = "none")
+
 ```{r}
-out <- read.csv("CIs_Simple_Case_bootstrap_Jul6.csv", header = TRUE)
+# out <- read.csv("Simulation outputs/CIs_Simple_Case_bootstrap_Jul13.csv", header = TRUE)
 out$S_lab = paste("S =", out$S) # convert to label string
 out$boot.type_lab <- paste("Bootstrap = ", out$boot.type)
 ```
 
-## S = 0
-```{r, fig.height=7}
-# S = 0
+
+## Figure 1A. Homoskedasticity + Normal + Random r.v.
+```{r}
+data.plot = subset(out, hetero == FALSE & shape == 100 & boot.type == 1 & multi == 'none' & fixed_rv == FALSE)
+```
+
+```{r}
 trellis.device(color=FALSE, new=FALSE)
 
-test = xyplot(coverage.t + coverage.robust ~ n | multi*boot.type_lab , 
-              data= subset(out, S == 0),
-              type='b', lwd=2,
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
               ylab='Coverage', xlab = 'Sample size',
-              ylim = c(0.85, 1.02),
+              # ylim = c(0.60, 1.02),
               panel= function(x, y, ...){
                 panel.grid()
                 panel.xyplot(x, y, ..., col='black')
                 panel.abline(h=0.95, col='gray', ..., lty=2)
                 }, 
-              main='CI coverage (S = 0)',
-              key = list(columns = 2,
-                         text = list(lab = c( "t", "robust")),
-                         points = list(pch =c(3, 6)))
+              main='CI coverage under homoskedasticity, normal residual and Random covariate(s)',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
               )
 print(test)
 ```
+
+## Figure 1B. Homoskedasticity + Normal + fixed r.v.
+```{r}
+data.plot = subset(out, hetero == FALSE & shape == 100 & boot.type == 1 & multi == 'none' & fixed_rv == TRUE)
+```
+
+```{r}
+trellis.device(color=FALSE, new=FALSE)
+
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
+              ylab='Coverage', xlab = 'Sample size',
+              # ylim = c(0.60, 1.02),
+              panel= function(x, y, ...){
+                panel.grid()
+                panel.xyplot(x, y, ..., col='black')
+                panel.abline(h=0.95, col='gray', ..., lty=2)
+                }, 
+              main='CI coverage under homoskedasticity, normal residual and fixed covariate(s)',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
+              )
+print(test)
+```
+
+
+## Figure 2A. Homoskedasticity + Normal (+ Random r.v.)
+
+```{r}
+data.plot = subset(out, hetero == FALSE & shape == 100 & boot.type == 1 & multi == 'none' & fixed_rv == FALSE)
+```
+
+```{r}
+trellis.device(color=FALSE, new=FALSE)
+
+
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
+              ylab='Coverage', xlab = 'Sample size',
+              # ylim = c(0.60, 1.02),
+              panel= function(x, y, ...){
+                panel.grid()
+                panel.xyplot(x, y, ..., col='black')
+                panel.abline(h=0.95, col='gray', ..., lty=2)
+                }, 
+              main='CI coverage under homoskedasticity, normal residual',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
+              )
+print(test)
+```
+
+## Figure 2B. Heterskedasticity + Normal + (Rnadom r.v)
+
+```{r}
+data.plot = subset(out, hetero == TRUE & shape == 100 & boot.type == 1 & multi == 'none' & fixed_rv == FALSE)
+```
+
+```{r}
+trellis.device(color=FALSE, new=FALSE)
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
+              ylab='Coverage', xlab = 'Sample size',
+              # ylim = c(0.60, 1.02),
+              panel= function(x, y, ...){
+                panel.grid()
+                panel.xyplot(x, y, ..., col='black')
+                panel.abline(h=0.95, col='gray', ..., lty=2)
+                }, 
+              main='Heteroskedasticity, normal residual',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
+              )
+print(test)
+```
+
+## Figure 3A. Homoskedasticity + Skewed + (Rnadom r.v)
+
+```{r}
+data.plot = subset(out, hetero == FALSE & shape == 0.1 & boot.type == 1 & multi == 'none' & fixed_rv == FALSE)
+```
+
+```{r}
+trellis.device(color=FALSE, new=FALSE)
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
+              ylab='Coverage', xlab = 'Sample size',
+              # ylim = c(0.60, 1.02),
+              panel= function(x, y, ...){
+                panel.grid()
+                panel.xyplot(x, y, ..., col='black')
+                panel.abline(h=0.95, col='gray', ..., lty=2)
+                }, 
+              main='Homoskedasticity, normal residual',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
+              )
+print(test)
+```
+
+## Figure 3B. Heteroskedasticity + Skewed + (Rnadom r.v)
+
+```{r}
+data.plot = subset(out, hetero == TRUE & shape == 0.1 & boot.type == 1 & multi == 'none' & fixed_rv == FALSE)
+```
+
+```{r}
+trellis.device(color=FALSE, new=FALSE)
+test = xyplot(coverage.f + coverage.chi + coverage.boot ~ n | S_lab * method , 
+              data= data.plot,
+              type='b', lwd=2, 
+              ylab='Coverage', xlab = 'Sample size',
+              # ylim = c(0.60, 1.02),
+              panel= function(x, y, ...){
+                panel.grid()
+                panel.xyplot(x, y, ..., col='black')
+                panel.abline(h=0.95, col='gray', ..., lty=2)
+                }, 
+              main='Heteroskedasticity, normal residual',
+              key = list(columns = 3,
+                         text = list(lab = c( "F CI", "Non-para boot CI", "Chi CI")),
+                         points = list(pch = 1:3))
+              # I don't know why but the function xyplot() automatically selects `pch`, so I had to manually select the corresponding `pch` for each label
+              )
+print(test)
+```
+
 
 ## S = 0.1
 
@@ -312,17 +476,18 @@ print(test)
 
 
 
-## S = 0.6
+## S = 0.66 (Homoskedasticity, Normal, Random r.v. and with Robust RESI Estimator used)
 
 ```{r, fig.height=7}
 # S = 0.6
+data = subset(out, S == 0.66 & hetero == FALSE & shape == 0.1 & fixed_rv == FALSE & method == "Chisq")
 trellis.device(color=FALSE, new=FALSE)
 
-test = xyplot(coverage.t + coverage.robust ~ n | multi*boot.type_lab , 
-              data= subset(out, S == 0.6),
+test = xyplot(coverage.f + coverage.chi ~ n | multi * boot.type_lab , 
+              data= data,
               type='b', lwd=2,
               ylab='Coverage', xlab = 'Sample size',
-              ylim = c(0.85, 1.02),
+              # ylim = c(0.85, 1.02),
               panel= function(x, y, ...){
                 panel.grid()
                 panel.xyplot(x, y, ..., col='black')
@@ -330,7 +495,7 @@ test = xyplot(coverage.t + coverage.robust ~ n | multi*boot.type_lab ,
                 }, 
               main='CI coverage (S = 0.6)',
               key = list(columns = 2,
-                         text = list(lab = c( "t", "robust")),
+                         text = list(lab = c( "F estimator", "Chi-sq estimator")),
                          points = list(pch =c(1, 3)))
               )
 print(test)
