--- a/work/RESI_CI_Simple case.Rmd
+++ b/work/RESI_CI_Simple case.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(qwraps2)
 library(latticeExtra)
+library(parallel)
 source("../R/nccd.r")
 source("../R/ncf.r")
 source("../R/boot.ci.r")
