working on pkgdown

--- a/docs/cs.Rmd
+++ b/docs/cs.Rmd
@@ -1,17 +1,12 @@
 ---
-output: github_document
+title: "Features Coming Soon"
+output: html_document
 ---
 
-
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
-)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Features Coming Soon
+# Package Features
 
-* Feature
+* feature
